# SkyRank

./: .gitignore  .gitmodules  AUTHORS.rst  CITACTION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  README.rst  install.bat  install.sh  pyproject.toml  requirements.txt
.github/workflows/: draft-pdf.yml
Algorithms/: BBS_COSKY.py  BbsCosky.py  CoskyAlgorithme.py  CoskySQL_param.py  CoskySql.py  DP_IDP.py  DP_IDP_cpp.py  DeepSky.py  DpIdpDh.py  RBig.json  RankSky.py  SkyIR.py  SkyIR_old.py  SkyIR_old2.py
Algorithms/Datas/: DeepSkyTest.db  RTuples8.json
Algorithms/Tests/: BBSCoskyTest.py  CoskyAlgoTest.py  DP_IDPTest.py  DeepSkyTest.py  DpIdpDhTest.py  RankSkyTest.py
Assets/: Pokemon_base.db  log.txt  pokemon.sqbpro
Assets/Databases/: cosky_db_C3_R100000.db
Assets/Export/: Results.csv
Assets/LatexData/: ExecutionRankSky3.json
Assets/LatexDatas/: ExecutionCoskyAlgo3.json  ExecutionCoskyAlgo369.json  ExecutionCoskyDatas.json  ExecutionCoskySql3.json  ExecutionCoskySql310^9.json  ExecutionCoskySql6.json  ExecutionCoskySql9.json  ExecutionCoskySqlAlgo.json  ExecutionRankSky3.json
Assets/LatexFiles/: CoskySql3.tex  CoskySql369.tex  CoskySql6.tex  CoskySqlAlgo.tex  CoskySqlAlgo369.tex  RanksyCoskyAlgo.tex  test.tex
Assets/ServerConfig/: ConfigMickael.json  ConfigNael.json
Assets/databases/: cosky_db_C3_R10.db  cosky_db_C3_R100.db  cosky_db_C3_R1000.db  cosky_db_C3_R10000.db  cosky_db_C3_R20.db  cosky_db_C3_R200.db  cosky_db_C3_R2000.db  cosky_db_C3_R20000.db  cosky_db_C3_R50.db  cosky_db_C3_R500.db  (+26 more)
BbsPy3/: Skyline.py  sample2.txt
Core/: App.py  AppRun.py  AppUI.py  AppUIPyQT.py  LatexMain.py  Results.csv
Database/: DatabaseHelpers.py  DatabaseToDict.py  DictToDatabase.py  SQL_DataMocker.py  SqlDataMocker.py
Utils/: AlgoCalculator.py  ComputerStats.py  DataParser.py  DisplayHelpers.py  Helpers.py  JsonUtils.py  LatexMaker.py  Preference.py  Ranking.py  TimerUtils.py  dpidp_cpp.cpp
bbs_py3/: query2.txt  query_j.txt  sample_j.txt  skyline.py
docs/: Algorithms.html  Core.html  Database.html  Utils.html  data_formats.rst  index.html  search.js  usage_guide.rst
paper/: paper.bib  paper.md  paper_new.bib  paper_new.md
(+157 files in other folders)
