[project]
name = "skyrank"
version = "1.0.0"
description = "A framework to benchmark and visualize Skyline algorithms."
authors = [
  { name = "Naël Turlure" },
  { name = "Mickael Martin-Nevot" }
]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.8,<3.9"

dependencies = [
  "numpy==1.22.4",
  "matplotlib==3.5.3",
  "scikit-learn==1.0.2",
  "PyQt5==5.15.10",
  "humanize",
  "colorama"
]

[tool.setuptools]
packages = ["Core", "Utils", "Database", "Algorithms"]

[project.scripts]
skyrank-gui = "Core.AppUIPyQT:main"
skyrank-gui2 = "Core.AppUI:main"
