[project]
name = "skyrank"
version = "1.0.0"
description = "A framework to benchmark and visualize Skyline algorithms."
authors = [
  { name = "Naël Turlure" },
  { name = "Mickael Martin-Nevot" }
]
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">=3.8,<3.9"

dependencies = [
  "numpy>=1.22.4,<1.25.0",
  "matplotlib>=3.5.3,<3.8.0",
  "PyQt5>=5.15.10",
  "colorama>=0.4.6",
  "humanize>=4.0.0",
  "six>=1.16.0",
  "pillow>=9.0.0,<11.0.0",
  "psutil",
  "GPUtil",
  "tabulate"
]

[tool.setuptools]
packages = ["Core", "Utils", "Database", "Algorithms", "external"]

[project.scripts]
skyrank-gui = "Core.AppUIPyQT:main"
skyrank-gui2 = "Core.AppUI:main"
skyrank-graph = "Core.LatexMain:main"
